<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtTurnServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_server"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtTurnServer"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/default_turn_server" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtTurnPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_port"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtTurnPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/default_turn_port" />

                <TextView
                    android:id="@+id/txtDsTurnPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ds_port"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtDsTurnPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/default_ds_port" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_user"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtUser"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_pwd"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtPwd"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtRemoteUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_remote"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtRemoteUser"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtRemotePort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_remote_port"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtRemotePort"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/p2p_connect_svr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_connect" />

                <Button
                    android:id="@+id/p2p_disconnect_svr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_disconnect" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/p2p_connect_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_connect_user" />

                <Button
                    android:id="@+id/p2p_disconnect_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_disconnect_user" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/p2p_create_proxy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_create_proxy" />

                <Button
                    android:id="@+id/p2p_destory_proxy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_destroy_proxy" />
            </LinearLayout>

            <Button
                android:id="@+id/p2p_send_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2p_send_file" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/p2p_request_dispatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_request_dispatch" />

                <Button
                    android:id="@+id/p2p_query_dispatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2p_query_dispatch" />
            </LinearLayout>

            <EditText
                android:id="@+id/editState"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:inputType="textMultiLine"
                android:textSize="12sp" >
            </EditText>
        </LinearLayout>
    </ScrollView>

</LinearLayout>